@@ -1,5 +1,8 @@
 Date       Version  Comment
 ---------------------------------------------------------------------------
+5/6  2004  2.0.0    Now ms-sys should compile cleanly also with a 2.6 Linux
+                    kernel based distribution.
+
 21/3 2004  1.1.3    Added switch -p to write needed partition information
                     which might be missing when some format programs are
                     used. The program now supports command line switch
